--- a/tex/vertical_self_org.tex
+++ b/tex/vertical_self_org.tex
@@ -24,7 +24,7 @@ $\epsilon$ is a random variable sampled from  $\mathcal{N}(0, 1)$ and determines
 \end{align}
 
 However, the latent space does not form a proper multivariate Gaussian distribution based on this reconstruction loss and the network architecture. A second loss constraint is necessary to obtain a probability distribution in the latent space: Let $P(\boldsymbol{X})$ be the probability distribution of the data $\boldsymbol{X}$, $P(\boldsymbol{h})$ the probability distribution of the latent variable $\boldsymbol{h}$ and $P(\boldsymbol{X}|\boldsymbol{h})$ the conditional probability of generating $\boldsymbol{X}$ for a given $\boldsymbol{h}$. The objective of the encoder is to infer $P(\boldsymbol{h})$ from $P(\boldsymbol{h}|\boldsymbol{X})$ which is the probability distribution that maps $\boldsymbol{X}$ into latent space. Simply put: the goal is to know the latent variable $\boldsymbol{h}$ of the input data $\boldsymbol{X}$.
-However, $P(\boldsymbol{h}|\boldsymbol{X})$ is unknown and we have to estimate it from a simpler distribution $Q(\boldsymbol{h}|\boldsymbol{X})$. This simpler distribution $Q(\boldsymbol{h}|\boldsymbol{X})$ is learned by the encoder and should be as close as possible to the real distribution $P(\boldsymbol{h}|\boldsymbol{X})$. This is accomplished by minimising the KL divergence\sidenote{the Kullback-Leibler (KL) divergence can ``measure'' the difference between two probability distributions} between these two probability distributions.
+However, $P(\boldsymbol{h}|\boldsymbol{X})$ is unknown, and we have to estimate it from a simpler distribution $Q(\boldsymbol{h}|\boldsymbol{X})$. This simpler distribution $Q(\boldsymbol{h}|\boldsymbol{X})$ is learned by the encoder and should be as close as possible to the real distribution $P(\boldsymbol{h}|\boldsymbol{X})$. This is accomplished by minimising the KL divergence\sidenote{the Kullback-Leibler (KL) divergence can ``measure'' the difference between two probability distributions} between these two probability distributions.
 
 \begin{align}\eqlbl{hso_3}
 	KL \left[ Q(\boldsymbol{h}|\boldsymbol{X}) || P(\boldsymbol{h}|\boldsymbol{X}) \right] = E \left[ \log Q(\boldsymbol{h}|\boldsymbol{X}) - \log P(\boldsymbol{h}|\boldsymbol{X}) \right]
@@ -458,7 +458,7 @@ When using $4$ VAEs, the input is divided into $4$ patches. If the decoder makes
 \subsection{Communication}\seclbl{vertical_self_org_methods_communication}
 The VAEs receive patches of the input image and thus have a limited field of view on the image.
 \figref{average_sample} visualises the patches that are fed into the VAEs when the MNIST dataset \cite{Lecun_Bottou_Bengio_Haffner_1998} is used.
-The first row shows the average of all images of the same class. Thus, these images are very representative for the dataset.
+The first row shows the average of all images of the same class. Thus, these images are very representative of the dataset.
 However, none of the models receives the entire image as input. Instead, the patches shown in the 2nd to the 5th row are fed into the VAEs.
 The patches, which only depict a quarter of the image, look rather similar for some classes, for example, the top-left patches of the classes $0$ and $9$, as well as the classes $4$, $5$, and $6$.
 Thus, these classes are not distinguishable by \emph{one} single VAE on its own.
@@ -472,9 +472,9 @@ Therefore, communication with neighbouring models is necessary to agree on an im
 \end{figure}
 
 
-This concept links well to the biological model: A single VAE can be seen as a neuron or a group of neurons. Initially, the VAEs have many suggestions to which classes the received patch could belong. However, through communication with neighbouring VAEs, suggestions are constantly ruled out because neighbouring VAEs do not support them. Thus, out of many suggestions, only the most valid ones are retained, resulting in an image representation. The biological model behaves similarly: At first, many neurons are active because they are excited by the captured image. However, this strong activation quickly becomes sparse as only the neurons supporting each other remain active. This process leads to the emergence of higher-level features (i.e. net fragments) that are representative for the input \sidecite{Malsburg_1987}.
+This concept links well to the biological model: A single VAE can be seen as a neuron or a group of neurons. Initially, the VAEs have many suggestions as to which classes the received patch could belong. However, through communication with neighbouring VAEs, suggestions are constantly ruled out because neighbouring VAEs do not support them. Thus, out of many suggestions, only the most valid ones are retained, resulting in an image representation. The biological model behaves similarly: At first, many neurons are active because they are excited by the captured image. However, this strong activation quickly becomes sparse as only the neurons supporting each other remain active. This process leads to the emergence of higher-level features (i.e. net fragments) that are representative of the input \sidecite{Malsburg_1987}.
 
-One of the biggest strengths of autoencoders is that they do not rely on labels but can be trained in an unsupervised manner. To keep this strength, also communication between the models should not rely on labels. Therefore, different types of communication are proposed that work without labels: communication based on latent representations, communication based on reconstructed images, and communication via a dedicated communication channel.
+One of the biggest strengths of autoencoders is that they do not rely on labels but can be trained in an unsupervised manner. To keep this strength, also communication between the models should not rely on labels. Therefore, different types of communication are proposed that work without labels: communication-based on latent representations, communication-based on reconstructed images, and communication via a dedicated communication channel.
 
 All these types of communication take place over two or more time steps. First, image patches are reconstructed by all VAEs. As a result, each VAE generates information in the latent space. This information can be communicated to the neighbouring VAEs. Thus, in a second step, the VAEs have more information available; their prediction and information from neighbouring VAEs. This additional information allows them to improve their prediction. The process can be repeated over a fixed number of time steps or until the network reaches an attractor state (i.e. the latent representations no longer change). In the following, different types of communication are proposed.
 
@@ -553,8 +553,8 @@ As described in \secref{vertical_self_org_methods_bigger_patches}, the predictio
 
 
 \subsubsection{Communication Channel}
-Another way to communicate is through a dedicated communication channel. For this purpose, each VAE has not only $1$ input and $1$ output channel but $4$ input and output channels. The input patch is fed into the first channel, and a reconstructed version is predicted in the first output channel. Thus, the first channel correspond to a classic VAE.
-The remaining three channels are for communication: Each VAE generates a separate communication output for its three neighbouring VAEs. Thus, each VAE receives an input patch to reconstruct and communication data. These four input matrices are stacked and fed into the encoder. For example, the first VAE receives a given patch on the input channel $1$ and communication data from the 2nd, 3rd, and 4th VAE on the input channels $2$-$4$. Based on this information, it outputs a patch reconstruction on the output channel $1$ and communication data that is sent to the 2nd, 3rd, and 4th VAE on the output channels $2$-$4$. Thus, there is a dedicated two-way communication channel between each neighbouring VAE. This is shown in \figref{vae_comm_channel}.
+Another way to communicate is through a dedicated communication channel. For this purpose, each VAE has not only $1$ input and $1$ output channel but $4$ input and output channels. The input patch is fed into the first channel, and a reconstructed version is predicted in the first output channel. Thus, the first channel corresponds to a classic VAE.
+The remaining three channels are for communication: Each VAE generates a separate communication output for its three neighbouring VAEs. Thus, each VAE receives an input patch to reconstruct and communicate data. These four input matrices are stacked and fed into the encoder. For example, the first VAE receives a given patch on the input channel $1$ and communication data from the 2nd, 3rd, and 4th VAE on the input channels $2$-$4$. Based on this information, it outputs a patch reconstruction on the output channel $1$ and communication data that is sent to the 2nd, 3rd, and 4th VAE on the output channels $2$-$4$. Thus, there is a dedicated two-way communication channel between each neighbouring VAE. This is shown in \figref{vae_comm_channel}.
 
 \begin{figure}[h]
     \centering
@@ -563,7 +563,7 @@ The remaining three channels are for communication: Each VAE generates a separat
     \figlbl{vae_comm_channel}
 \end{figure}
 
-The loss function remains the same for the first output channel since the goal is still the same, i.e. to reconstruct the output as good as possible and to have a well-shaped latent space. The only difference is that model can now access four input channels instead of one. However, the communication channels must be trained in order for them to be helpful for other VAEs. Therefore, an additional loss term is applied to the $3$ output communication channels. Thereby, the idea is to optimise the output of these communication channels so that the other VAEs can better reconstruct their patch.
+The loss function remains the same for the first output channel since the goal is still the same, i.e. to reconstruct the output as well as possible and to have a well-shaped latent space. The only difference is that model can now access four input channels instead of one. However, the communication channels must be trained in order for them to be helpful for other VAEs. Therefore, an additional loss term is applied to the $3$ output communication channels. Thereby, the idea is to optimise the output of these communication channels so that the other VAEs can better reconstruct their patch.
 
 Let $V = \{V_1, ..., V_n \}$ be the set of $n$ VAEs. Each VAE has $n$ output channels, one channel for the reconstructed image and $n-1$ channels for communication. Furthermore, each VAE $V_i$ has a loss $\mathcal{L}_{\text{VAE}_i}$ based on the reconstruction goodness and the shape of the latent space (c.f. \eqref{hso_6}). The $3$ communication channels of VAE $i$ can influence the loss $\mathcal{L}_{VAE_j}$ of VAE $j$ (i.e. help to improve the loss by providing better information). How helpful the communication channels are can therefore be determined by the average loss of the other VAEs.
 
@@ -590,14 +590,14 @@ After training, the average value of $\boldsymbol{\mu}$ is calculated for each c
 		\boldsymbol{\overline{\mu}}_{vc} = \frac{1}{n_c} \sum_{i=1}^{n_c} \boldsymbol{\mu}_i
 \end{align}
 
-This average value can be considered the ``cluster centre'' of a class in latent space or as a world model of a class. A given sample is matched against these world models per class to make a prediction. As with horizontal self-organisation, the cosine similarity between a sample and the class prototypes is used to determine their similarity. To predict a sample $s$, it is fed through the encoder to obtain $\boldsymbol{\mu}_{vs}$. Then, this sample is compared with all class prototpyes by computing the cosine similarity: 
+This average value can be considered the ``cluster centre'' of a class in latent space or as a world model of a class. A given sample is matched against these world models per class to make a prediction. As with horizontal self-organisation, the cosine similarity between a sample and the class prototypes is used to determine their similarity. To predict a sample $s$, it is fed through the encoder to obtain $\boldsymbol{\mu}_{vs}$. Then, this sample is compared with all class prototypes by computing the cosine similarity: 
 
 \begin{align}\eqlbl{hso_13}
 		\text{cos}_{vsc} = \text{cos}(\boldsymbol{\mu}_{vs}, \boldsymbol{\overline{\mu}}_{vc}) = \frac{\boldsymbol{\mu}_vs \cdot \boldsymbol{\overline{\mu}}_{vc}}{\max(||\boldsymbol{\mu}_{vs}||_2, ||\boldsymbol{\overline{\mu}}_{vc}||_2)}
 \end{align}
 
 Thus, the cosine similarity $\text{cos}_{vsc}$ is calculated for each VAE $v$ between the class prototypes $c$ and the sample $s$.
-Afterwards, the class $c$ with the highest average cosine similarity between the sample activations $\boldsymbol{\mu}_{vs}$ and the class prototype $\boldsymbol{\overline{\mu}}_{vc}$ over all VAEs $v$ is used as the prediction.
+Afterwards, the class $c$ with the highest average cosine similarity between the sample activations $\boldsymbol{\mu}_{vs}$ and the class prototype $\boldsymbol{\overline{\mu}}_{vc}$ of all VAEs $v$ is used as the prediction.
 
 \begin{align}\eqlbl{hso_14}
 		\argmax_{c \in C} \frac{1}{4} \sum_{v=1}^{4} \text{cos}_{vsc}
@@ -625,7 +625,7 @@ TODO: This still needs to be implemented (therefore, not explained in more detai
 
 
 \section{Results}\seclbl{vertical_self_org_results}
-As for horizontal self-organisation, the MNIST \cite{Lecun_Bottou_Bengio_Haffner_1998} and MNIST-C \cite{Mu_Gilmer_2019} datasets are used to evaluate the models (c.f. \secref{horizontal_self_org_methods_dataset}). 
+As for horizontal self-organisation, the MNIST \cite{Lecun_Bottou_Bengio_Haffner_1998}, and MNIST-C \cite{Mu_Gilmer_2019} datasets are used to evaluate the models (c.f. \secref{horizontal_self_org_methods_dataset}). 
 
 Different models are trained to evaluate the proposed architecture. \tabref{hso_models} gives an overview of the models. A single VAE is used as the baseline (model no. (i)), which receives the entire image as input and reconstructs it. This VAE is obviously trained without time steps and communication. Vertical self-organisation is done using $4$ VAEs ($2\times 2$) in different settings: Four independent VAEs are trained (without time steps and communication), each VAE receives a non-overlapping image patch as input and either reconstructs the received patch (model no. (ii)) or predicts the entire image (model no. (iii)). Furthermore, different types of communication are added: First, the VAEs forward the reconstructed \emph{input patch} to the other VAEs (according to \figref{recon_patch_forw}). This communication takes place over $4$ time steps, and the VAEs are trained by either reconstructing the input patch (model no. (iv)) or predicting the entire image\sidenote{but despite the prediction of the entire image, only the prediction of the reconstructed patch is communicated to the other VAEs.} (model no. (v)). Second, each VAE predicts the whole image and forwards the predicted \emph{input patch of the neighbour} to the other VAEs over $4$ time steps  (model no. (vi)) (c.f. \figref{neighbouring_patch_forw}). Third, the VAEs are used to predict the whole image over one time step, and the \emph{predicted image} is forwarded to the other VAEs (e.g. \figref{recon_img_forw}) (model no. (vii)).
 
@@ -647,16 +647,16 @@ Different models are trained to evaluate the proposed architecture. \tabref{hso_
     \tablbl{hso_models}
 \end{table}
 
-The number of time steps is a hyperparameter: Obviously, the models without communication do not need time steps. In the case where each VAE predicts the entire image and forwards it to the other VAEs, only one time step is used. This means that the entire image is predicted once and then forwarded to the other VAEs. It has been observed that one time step is sufficient and that the predictions do not change in further time steps. This could be due to the fact that all relevant information is already transmitted within one time step when the entire image is sent, and no further communication cycles are necessary. However, if only a patch of the image is forwarded to the other VAEs, the predictions may be updated over several time steps. Therefore, $4$ time steps are used. The predictions usually do not change after $4$ time steps, and thus, using $4$ time steps seems enough. When only patches are forwarded, the models contain much more dynamics: A VAE makes a prediction, communicates it to its neighbours and receives data from its neighbours. In a subsequent time step, the VAE has more information and can correct its prediction, which in turn can lead to a correction of a neighbour's prediction. Thus, the VAEs correct each other over several time steps. An example of four predicted samples is shown in \figref{hso_over_time}: The left side shows the initial prediction of the model no. (vi), and the right side the prediction of the same image after $4$ time steps. This visualisation indicates that the predictions are improved thanks to communication. The investigation of the reconstruction error confirms the efficiency of the communication: The initial prediction without communication has an average reconstruction error of $0.23$, and the prediction after $4$ communication cycles has an error of $0.16$.
+The number of time steps is a hyperparameter: Obviously, the models without communication do not need time steps. In the case where each VAE predicts the entire image and forwards it to the other VAEs, only one time step is used. This means that the entire image is predicted once and then forwarded to the other VAEs. It has been observed that one time step is sufficient and that the predictions do not change in further time steps. This could be due to the fact that all relevant information is already transmitted within one time step when the entire image is sent, and no further communication cycles are necessary. However, if only a patch of the image is forwarded to the other VAEs, the predictions may be updated over several time steps. Therefore, $4$ time steps are used. The predictions usually do not change after $4$ time steps, and thus, using $4$ time steps seems enough. When only patches are forwarded, the models contain much more dynamics: A VAE makes a prediction, communicates it to its neighbours and receives data from its neighbours. In a subsequent time step, the VAE has more information and can correct its prediction, which in turn can lead to a correction of a neighbour's prediction. Thus, the VAEs correct each other over several time steps. An example of four predicted samples is shown in \figref{hso_over_time}: The left side shows the initial prediction of model no. (vi), and the right side the prediction of the same image after $4$ time steps. This visualisation indicates that the predictions are improved thanks to communication. The investigation of the reconstruction error confirms the efficiency of the communication: The initial prediction without communication has an average reconstruction error of $0.23$, and the prediction after $4$ communication cycles has an error of $0.16$.
 
 \begin{figure}[h]
     \centering
     \includegraphics[width=0.79\textwidth]{hso_over_time}
-    \caption[Change of the model's prediction over time]{Four random predictions of the model no. (vi) over $4$ time-steps: The initial prediction is shown on the left and the prediction after $4$ communication cycles on the right.}
+    \caption[Change of the model's prediction over time]{Four random predictions of model no. (vi) over $4$ time-steps: The initial prediction is shown on the left, and the prediction after $4$ communication cycles on the right.}
     \figlbl{hso_over_time}
 \end{figure}
 
-Of particular interest is not how well the samples are reconstructed but how well the latent space is shaped. Visualising the $\boldsymbol{\mu}$ values is a simple way to investigate the latent space. Therefore, the $\boldsymbol{\mu}$ vectors with a length of $n=32$ are reduced to $2$ dimensions using t-SNE \sidecite{van2008visualizing} and visualised. Since $25$ VAEs are trained in this evaluation, visualising all t-SNE plots is infeasible. Instead, \figref{hso_tSNE} only shows the plot of the baseline (model no. (i)), the plot of the model no. (ii) as an example of four VAEs reconstructing patches, and the plot of the model no. (vi) as a representative example of an architecture with communication and image-reconstruction.
+Of particular interest is not how well the samples are reconstructed but how well the latent space is shaped. Visualising the $\boldsymbol{\mu}$ values is a simple way to investigate the latent space. Therefore, the $\boldsymbol{\mu}$ vectors with a length of $n=32$ are reduced to $2$ dimensions using t-SNE \sidecite{van2008visualizing} and visualised. Since $25$ VAEs are trained in this evaluation, visualising all t-SNE plots is infeasible. Instead, \figref{hso_tSNE} only shows the plot of the baseline (model no. (i)), the plot of the model no. (ii) as an example of four VAEs reconstructing patches, and the plot of model no. (vi) as a representative example of an architecture with communication and image reconstruction.
 
 As expected, the latent space of model no. (i), which receives the entire image as input, is well organised, and the classes are distinguishable within the latent space. Model no. (ii) consists of $4$ VAEs without communication. Its latent space is less well organised: the classes are no longer clearly identifiable as clusters. However, it is interesting to note that each VAE can separate certain classes better than others because of the different patches it receives as input. Considering all $4$ VAEs, each class can be relatively well identified by at least one VAE, while no VAE can identify all classes. This indicates the benefit of communication between the VAEs.
 By applying the proposed measures (i.e. communication and predicting the whole image instead of reconstructing the input patch), the structure of the latent space for each VAE improves significantly: almost every VAE is able to separate the classes. This supports the usefulness of the proposed measures.
@@ -672,9 +672,9 @@ By applying the proposed measures (i.e. communication and predicting the whole i
 Another way to evaluate the latent space is to measure its suitability for classification. The suitability for classification can be measured by applying a k-means clustering and then calculating the normalised mutual information (NMI) score between the cluster centres and the labels. This metric compares cluster assignments and labels by calculating their consistency: It measures how well a cluster can be assigned to a label. \tabref{hso_nmi} shows the NMI scores of the models.
 The NMI score is challenging to interpret as an absolute number. However, a relative comparison of the scores is of much more interest. Model no. (i) is a single VAE that receives the entire image as input, not just a patch of it. Therefore, this model is assumed to have a well-formed latent space, and the value of $0.6$ is close to an upper bound. Model no. (ii) consists of four VAEs without any measures and is thus considered a lower bound. Overall, most models seem to have a well-formed latent space thanks to the proposed measures and achieve scores close to the upper bound.
 
-It is evident that the latent space is significantly better shaped when the whole image is predicted and not only the input patch is reconstructed. For example, models no. (ii) and (iii) as well as models no. (iv) and (v) are the same models, but one of the models reconstructs the input patch and the other one predicts the entire image. The models that predict the whole image are significantly better: the NMI value increases on average from $0.36$ to $0.53$ (model no. (ii) $\rightarrow$ model no. (iii)) and from $0.37$ to $0.59$ (model no. (iv) $\rightarrow$ model no. (v)) respectively.
+It is evident that the latent space is significantly better shaped when the whole image is predicted and not only the input patch is reconstructed. For example, models no. (ii) and (iii), as well as models no. (iv) and (v) are the same models, but one of the models reconstructs the input patch, and the other one predicts the entire image. The models that predict the whole image are significantly better: the NMI value increases on average from $0.36$ to $0.53$ (model no. (ii) $\rightarrow$ model no. (iii)) and from $0.37$ to $0.59$ (model no. (iv) $\rightarrow$ model no. (v)) respectively.
 
-A slight improvement through communication can also be observed. Model no. (iii) consists of $4$ VAEs without communication and predicts the whole picture. It achieves an NMI value of $0.53$. The models with communication are all better, reaching NMI values of $0.59$ (model no. (v)), $0.54$ (model no. (vi)) and $0.54$ (model no. (vii)). However, the improvement is not as significant as for the prediction of the whole image. This is probably due to the fact that the image patches are too large and more VAEs should be used. For example, model no. (iii) has a very high NMI score compared to the baseline, indicating that this model can classify the samples even though no communication is used, and therefore, the patches contain too much information. This makes communication less important, and adding communication does not significantly improve results.
+A slight improvement through communication can also be observed. Model no. (iii) consists of $4$ VAEs without communication and predicts the whole picture. It achieves an NMI value of $0.53$. The models with communication are all better, reaching NMI values of $0.59$ (model no. (v)), $0.54$ (model no. (vi)) and $0.54$ (model no. (vii)). However, the improvement is not as significant as for the prediction of the whole image. This is probably due to the fact that the image patches are too large, and more VAEs should be used. For example, model no. (iii) has a very high NMI score compared to the baseline, indicating that this model can classify the samples even though no communication is used, and therefore, the patches contain too much information. This makes communication less important, and adding communication does not significantly improve results.
 
 
 \begin{table}[h] 
@@ -695,7 +695,7 @@ A slight improvement through communication can also be observed. Model no. (iii)
 \end{table}
 
 Finally, the proposed classification method is evaluated. The results are shown in \tabref{hso_accuracy}.
-For each VAE of a model, the cosine similarity according to \eqref{hso_13} between a sample and a class prototype is calculated. Thus, the accuracy can be calculated not only for the entire model (i.e. all $4$ VAEs together) but also for each VAE independently. \tabref{hso_accuracy} shows the average accuracy per VAE in the column ``Avg. VAEs''. Furthermore, by calculating the average cosine similarity, a voting between VAEs is done. The accuracy of this voting is shown in the column ``Overall''. The voting works exceptionally well: for example, model no. (ii) has $4$ VAEs with an average accuracy of $62.4\%$ on the MNIST dataset. The best VAE has an accuracy of $66.1\%$, and the worst $59.7\%$. By voting, the overall accuracy increases to $81.7\%$, significantly better than the best VAE.
+For each VAE of a model, the cosine similarity according to \eqref{hso_13} between a sample and a class prototype is calculated. Thus, the accuracy can be calculated not only for the entire model (i.e. all $4$ VAEs together) but also for each VAE independently. \tabref{hso_accuracy} shows the average accuracy per VAE in the column ``Avg. VAEs''. Furthermore, by calculating the average cosine similarity, voting between VAEs is done. The accuracy of this voting is shown in the column ``Overall''. The voting works exceptionally well: for example, model no. (ii) has $4$ VAEs with an average accuracy of $62.4\%$ on the MNIST dataset. The best VAE has an accuracy of $66.1\%$, and the worst $59.7\%$. By voting, the overall accuracy increases to $81.7\%$, significantly better than the best VAE.
 
 On the MNIST dataset, the base model (model no. (i)) is significantly outperformed by some models in terms of accuracy. However, robustness (measured on MNIST-C) is not significantly improved by using multiple VAEs. As with the evaluation of the NMI score, it can be observed that models that predict the entire image perform better than models that only reconstruct a patch of the image. Furthermore, the accuracy of the models without communication is generally very high, suggesting that the image patches are too large and more VAEs should be used.
 
@@ -729,4 +729,5 @@ The accuracy is calculated by comparing a sample with \emph{one} prototype per c
 
 % TODO: target function und objective function vereinheitlichen
 % TODO: net fragment or net fragment, dataset or dataset, time-step or time step
+
 
