--- a/tex/math.tex
+++ b/tex/math.tex
@@ -31,19 +31,19 @@ Depending on the context, a variable can be a scalar value, a vector, or a matri
 	$\eta$ & The learning rate of an optimisation algorithm\\
 	$\rho$ & The desired activation probability of neurons\\
 	$\hat{\rho}_i$ & The activation probability of a neuron $i$\\
-	$\psi$ & An estimate of the synaptic activity, used for Hebbian learning (i.e. an estimate of $a$)\\
+	$\psi$ & An estimate of the synaptic activity used for Hebbian learning (i.e. an estimate of $a$)\\
 	$\theta$ & A threshold value that was used instead of the bias $b$ in early versions of neural networks or as goodness threshold in the forward-forward network\\
 	$a_i$ & The output of an activation function of a single neuron\\
 	$\boldsymbol{a}$ & The output of an intermediate layer of a multi-layer network, the output of the last layer is typically denoted as $\boldsymbol{\hat{y}}$\\
 	$b_i$ & The bias of a single neuron\\
 	$\boldsymbol{b}$ & The bias of a network layer\\
 	$C$ & The set of classes of a classification task\\
-	$\boldsymbol{h}$ & The latent representations of a network that are typically used in a subsequent downstream task (specific instance of $\boldsymbol{a}$)\\
+	$\boldsymbol{h}$ & The latent representations of a network that are typically used in a subsequent downstream task (a specific instance of $\boldsymbol{a}$)\\
 	$k$ & The number of neurons within a layer\\
 	$L$ & The number of layers of a network\\
 	$l$ & The index of a layer, e.g. $\boldsymbol{W}^{[l]}$ is the weight matrix of layer $l$\\
 	$m$ & The number of input samples within a (mini-)batch\\
-	    & or the state of the memory in context of Hoppfield networks\\
+	    & or the state of the memory in the context of Hoppfield networks\\
 \end{tabular}
 
 
@@ -83,3 +83,4 @@ Depending on the context, a variable can be a scalar value, a vector, or a matri
 	 $\tanh(\cdot)$ & The hyperbolic tangent activation function (c.f. \eqref{act_functions})\\
 	
 \end{tabular}
+
